# JiPP2

./: .clang-format  .gitignore  zad1.cpp  zad2.cpp
firstLib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
firstLib/firstLib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
firstLib/firstLibCall/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
lab10/operacje na plikach/: .gitignore  a.cpp  przystanki.csv
lab10/szablony/: 1.cpp  2.cpp  3.cpp
lab11/Konwersje/: 1  1.cpp
lab11/Wskaźniki inteligentne/: shared  shared.cpp  unique  unique.cpp
lab3/przeciazenia/: a  pole.cpp
lab3/tablice/: a  a.cpp  a.out  b.cpp
lab3/wskazniki/: a  a.cpp
lab3/wyjatki/: a  a.cpp
lab4/destruktory/: a  a.cpp
lab4/klasy i obiekty/: a  a.cpp
lab4/konstruktory/: a  a.cpp
lab4/struktury/: 1  1.cpp  2  2.cpp  3  3.cpp  4  4.cpp
lab7/dziedziczenie/: a  a.cpp
lab7/polimorfizm/: a  a.cpp
lab8/: CMakeLists.txt  Notes
lab8/include/: ListNote.hpp  Note.hpp  TextNote.hpp
lab8/src/: ListNote.cpp  Note.cpp  TextNote.cpp  main.cpp
lab9/: 1.cpp  2.cpp
lab9/odtwarzacz/: CMakeLists.txt  odtwarzacz
projekt1/: .gitignore  CMakeLists.txt
projekt1/matrixApp/: main.cpp
projekt1/matrixLib/: CMakeLists.txt
projekt1_poprawa/: CMakeLists.txt
projekt_koncowy/: CMakeLists.txt  biblioteka.db3  projektKoncowy
projekt_koncowy/include/: Biblioteka.hpp  Czytelnik.hpp  Data.hpp  Ksiazka.hpp  Wypozyczenie.hpp
projekt_koncowy/src/: Biblioteka.cpp  Czytelnik.cpp  Data.cpp  Ksiazka.cpp  main.cpp
simpleCalc/: CMakeLists.txt
(+47 files in other folders)
